// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Tests Default State Tests should display valid html 1`] = `
<div
  className="container"
>
  <button
    className="toggle__btn button--off"
    onClick={[Function]}
  >
    START TIMER
  </button>
  <div />
  <div
    className="history__container"
  >
    <div
      className="history__list"
    >
      <p
        className="history__item--centered"
      >
        NO TIMERS
      </p>
    </div>
    <div
      className="history__total"
    >
      Total Time - 
      None
    </div>
  </div>
  <div>
    <audio
      id="audio-element"
    >
      <source
        src="warning.mp3"
      />
    </audio>
  </div>
</div>
`;

exports[`App Tests Press Toggle Button should display valid html 1`] = `
<App>
  <div
    className="container"
  >
    <ToggleButton
      clickHandler={[Function]}
      off={false}
    >
      <button
        className="toggle__btn button--on"
        onClick={[Function]}
      >
        STOP TIMER
      </button>
    </ToggleButton>
    <TimerDisplay
      completedCallback={[Function]}
      run={true}
      timerCallback={[Function]}
    >
      <div />
    </TimerDisplay>
    <StatsList
      deleteCallBack={[Function]}
      history={Array []}
    >
      <div
        className="history__container"
      >
        <div
          className="history__list"
        >
          <p
            className="history__item--centered"
          >
            NO TIMERS
          </p>
        </div>
        <div
          className="history__total"
        >
          Total Time - 
          None
        </div>
      </div>
    </StatsList>
    <TimerDisplay
      play={false}
    >
      <div>
        <audio
          id="audio-element"
        >
          <source
            src="warning.mp3"
          />
        </audio>
      </div>
    </TimerDisplay>
  </div>
</App>
`;

exports[`App Tests Press Toggle Button twice should display valid html 1`] = `
<App>
  <div
    className="container"
  >
    <ToggleButton
      clickHandler={[Function]}
      off={true}
    >
      <button
        className="toggle__btn button--off"
        onClick={[Function]}
      >
        START TIMER
      </button>
    </ToggleButton>
    <TimerDisplay
      completedCallback={[Function]}
      run={false}
      timerCallback={[Function]}
    >
      <div />
    </TimerDisplay>
    <StatsList
      deleteCallBack={[Function]}
      history={Array []}
    >
      <div
        className="history__container"
      >
        <div
          className="history__list"
        >
          <p
            className="history__item--centered"
          >
            NO TIMERS
          </p>
        </div>
        <div
          className="history__total"
        >
          Total Time - 
          None
        </div>
      </div>
    </StatsList>
    <TimerDisplay
      play={false}
    >
      <div>
        <audio
          id="audio-element"
        >
          <source
            src="warning.mp3"
          />
        </audio>
      </div>
    </TimerDisplay>
  </div>
</App>
`;
